# lawmatics-mcp-v1.0

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  OAUTH_SETUP_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START_OAUTH.md  README.md  cloud.py  get_access_token.sh  get_token_auto.py  get_token_manual.py  get_token_with_server.py  pyproject.toml  test_deployed_api.py  test_deployed_server.sh  test_phone_search.py
app/: __init__.py  __main__.py  config.py  oauth.py  server.py
app/tools/: __init__.py  get.py  manage.py  search.py
